k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: montrealappoauth
  name: montrealappoauth
  namespace: montreal
spec:
  type: ClusterIP
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    name: montrealappoauth
