k8s/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: montrealappoauth
  namespace: montreal
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: montrealappoauth.montreal.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: montrealappoauth
                port:
                  number: 8080
